[package]
name = "cdp-cli"
version = "0.1.0"
authors = ["Kenichi Ishibashi <ishibashi.kenichi@gmail.com>"]
edition = "2018"

[dependencies]
async-net = "0.1.1"
smol = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.1"
httparse = "1.3.4"
structopt = "0.3"
rustyline = "6.2.0"
async-channel = "1.4.0"
